dream big added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
         </div>
 
     </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/profile 2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Full Stack devoloper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error provident tenetur eaque odio deserunt
+                similique laboriosam velit in aperiam? Accusantium distinctio maiores facere ducimus aut.</p>
+
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/shaim-mahfuz-sagor-107767170/">Download resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
