footer and othes commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="name-colour">Shaim Sagor's</span> World!</h1>
@@ -32,7 +32,7 @@
 
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/profile 2.png" alt="">
         </div>
@@ -47,6 +47,31 @@
                 href="https://www.linkedin.com/in/shaim-mahfuz-sagor-107767170/">Download resume</a>
         </div>
     </section>
+
+    <section class="experience-area">
+        <h1> Experiences</h1>
+
+        <div class="flexible-container">
+            <div id="full-stack-margin" class="experience-item">
+                <h2>Full stack devoloper</h2>
+                <h3 class="name-colour">2021-present / Pro level devoloper</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente aperiam libero quasi dolorum
+                    doloremque
+                    aliquam illum porro? Quam, corrupti nostrum!
+                </p>
+            </div>
+
+            <div id="baby-stack-margin" class="experience-item">
+                <h2>Baby stack devoloper </h2>
+                <h3 class="name-colour">2020 - 2021 / Programing hero learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis facere praesentium vel unde ullam
+                    rem
+                    minima beatae corporis molestiae, id quisquam esse illo veritatis. Fugiat id consectetur reiciendis
+                    optio aut?</p>
+            </div>
+        </div>
+    </section>
+    <footer>Lorem ipsum dolor sit amet.</footer>
 </body>
 
 </html>
